--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -26,6 +26,7 @@ jobs:
       with:
         node-version: ${{ matrix.node-version }}
         cache: 'pnpm'
+    - run: npm -i -g pnpm
     - run: pnpm ci
     - run: pnpm run build --if-present
     - run: pnpm test
