--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -25,8 +25,8 @@ jobs:
       uses: actions/setup-node@v4
       with:
         node-version: ${{ matrix.node-version }}
-        cache: 'pnpm'
-    - run: npm -i -g pnpm
+        cache: 'npm'
+    - run: npm i -g pnpm
     - run: pnpm ci
     - run: pnpm run build --if-present
     - run: pnpm test
