--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -26,5 +26,7 @@ jobs:
       with:
         node-version: ${{ matrix.node-version }}
     - run: npm i -g pnpm
+    - run: pnpm install
+    - run: pnpm add sharp
     - run: pnpm run build --if-present
     - run: pnpm test
