--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -28,5 +28,10 @@ jobs:
     - run: npm i -g pnpm
     - run: pnpm install
     - run: pnpm add sharp
-    - run: pnpm run build --if-present
+    - run: pnpm run build
     - run: pnpm test
+    - name: Deploy
+      uses: JamesIves/github-pages-deploy-action@v4.3.3
+      with:
+        branch: page
+        folder: dist
