--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -26,8 +26,8 @@ jobs:
       with:
         node-version: ${{ matrix.node-version }}
     - name: Setup pnpm environment
-      run: npm i -g pnpm
-           pnpm install
+      run: npm i -g pnpm &&
+           pnpm install &&
            pnpm add sharp
     - name: Build
       run: pnpm run build
