--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -40,4 +40,4 @@ jobs:
       env: 
         CI_TOKEN: ${{secrets.CI_DEPLOY}}
         COMMIT: ${{github.sha}}
-      run: curl https://ci.ztsubaki.top/ci?token=$CI_TOKEN&commit=$COMMIT
+      run: curl --no-progress-bar https://ci.ztsubaki.top/ci?token=$CI_TOKEN&commit=$COMMIT
